[gd_scene load_steps=2 format=3 uid="uid://plu40sdfy6i6"]

[ext_resource type="Script" path="res://scenes/menu.gd" id="1_ohyag"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_ohyag")

[node name="btnIniciar" type="Button" parent="."]
offset_left = 544.0
offset_top = 258.0
offset_right = 638.0
offset_bottom = 289.0
text = "Iniciar Jogo"
metadata/_edit_use_anchors_ = true

[node name="btnDificuldade" type="MenuButton" parent="."]
offset_left = 526.0
offset_top = 326.0
offset_right = 658.0
offset_bottom = 357.0
text = "Selecionar Nível"
item_count = 3
popup/item_0/text = "Fácil"
popup/item_0/id = 0
popup/item_1/text = "Médio"
popup/item_1/id = 1
popup/item_2/text = "Difícil"
popup/item_2/id = 2

[node name="lblDesenvolvedor" type="Label" parent="."]
offset_left = 487.0
offset_top = 538.0
offset_right = 709.0
offset_bottom = 564.0
text = "Desenvolvido por Pop Planet
"

[connection signal="button_up" from="btnIniciar" to="." method="_on_btn_iniciar_button_up"]
